--- a/index.html
+++ b/index.html
@@ -20,10 +20,12 @@
 
     <section id="step7">
       <h2>Step 7</h2>
+      <button class='button7' type="button" name="button">Run AJAX Request to Count</button>
     </section>
 
     <section id="step8">
       <h2>Step 8</h2>
+      <button class='button8' type="button" name="button">Run AJAX Request to Time</button>
     </section>
 
     <section id="step9">
