--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
 
     <section id="step9">
       <h2>Step 9</h2>
+      <button class='button9' type="button" name="button">Run AJAX Request to A Car</button>
+      <ul id="cars">
+      </ul>
     </section>
 
   </body>
